# MemoryManagement

./: CMakeLists.txt  Makefile  README.md  custom_unistd.c  custom_unistd.c.own  custom_unistd.h  custom_unistd.h.own  heap.c  heap.h  main.c  main.map  memmanager.c  rdebug.c  tested_declarations.h  unit_test_v2.c
